# nle-nethack

./: .flake8  .gitmodules  .pre-commit-config.yaml  ASAN.md  CMakeLists.txt  GEMINI.md  README.md  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.gemini/skills/format/: SKILL.md
.gemini/skills/lint/: SKILL.md
.gemini/skills/test/: SKILL.md
.github/workflows/: check_license.yml  cmake.yml  lint_python.yml  release-drafter.yml  test_and_deploy.yml  test_package.yml
agents/: Dockerfile
doc/nle/source/: getting_started.rst  index.rst  tiles.rst
docker/: README.md
include/: nletypes.h  tradstdc.h
nle/: __init__.py
nle/agent/: agent.py
nle/dataset/: __init__.py  dataset.py  populate_db.py
nle/env/: __init__.py  base.py
nle/nethack/: __init__.py  nethack.py
nle/scripts/: collect_env.py  pixels.py  ttyrec.py
nle/tests/: test_converter.py  test_dataset.py  test_db.py  test_nethack.py  test_populate_db.py  test_system.py  test_tiles.py
python/nle/: __init__.py
python/nle/env/: __init__.py
python/nle/nethack/: __init__.py
python/nle/tests/: test_converter.py  test_dataset.py  test_db.py  test_envs.py  test_nethack.py  test_populate_db.py  test_profile.py  test_system.py
scripts/: gemini-sandbox.sh
src/: nle.c
util/: CMakeLists.txt
win/rl/: nletiletxt.c  pynethack.cc  tile2rgb.c  tile2rgb.h
